# nir-adjust

./: .coveralls.yml  .travis.yml  CMakeLists.txt  README.md  package.xml
cfg/: nir_adjustment.cfg  offset
src/: main.cpp  nir_adjust.hpp  pointcloud_adjust_base.hpp  r01_nir_adjust.hpp  r01_nir_adjust_main.cpp  suture_point_adjust.hpp  suture_point_adjust_main.cpp
test/: nir_adjust_test.cpp
